changed user file to html basic file and updated arun classes and address

--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,27 @@
-<p>
-This is contact.html file
-contains a lot of lines
-in the source code,
-but the browser
-ignores it.
-</p>
+<!DOCTYPE html>
+<html>
+<body>
+	<h1>bsnl staff quarers</h1>
+	 <h1>hyderabad</h1>
+ <h1>500095</h1>
 
-<p>
-This paragraph
-contains         a lot of spaces
-in the source         code,
-but the        browser
-ignores it.
-</p>
+ <h1>git sessions</h1>
+<p>by online near koti Arun classes</p>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+:wq!
+
+
