added title called services

--- a/service.html
+++ b/service.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>services</title>
+	</head>
 <body>
 	<title>services</title>
 	<h1>bsnl staff quarers</h1>
